# arduilib

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  arduinint  arduinint.c  arduino.c  meson.build
.ci/: install.sh
arduilib/: Makefile  arduilib_error.c  arduilib_error.h  arduilib_io.c  arduilib_io.h  arduilib_logger.c  arduilib_logger.h  arduilib_main.c  arduilib_main.h  arduilib_time.c
arduilib/test/: test_arduilib_io.c  wrap_arduilib_error.c  wrap_arduilib_logger.c  wrap_arduilib_main.c  wrap_arduilib_time.c  wrap_reg_pin.c
arduino/: Makefile  arduino.c  arduino.h  arduino_main.c
arduino-function/: README.md  meson.build
arduino-function/include/: ardno_constant.h  ardno_digital_io.h  ardno_error.h  ardno_interrupt.h  ardno_time.h  arduino.h
arduino-function/src/: ardno_digital_io.c  ardno_error.c  ardno_interrupt.c  ardno_time.c  meson.build
arduino-function/test/: meson.build  test_ardno_time.c
arduino/arduilib/: Makefile  arduilib_error.c  arduilib_error.h  arduilib_io.c  arduilib_io.h  arduilib_logger.c  arduilib_logger.h  arduilib_time.c  arduilib_time.h  arduino_error.c  arduino_error.h  arduino_io.c
arduino/arduino-lib/: arduino_io.h  arduino_time.c  arduino_time.h
arduino/lib/: arduino_io.c  arduino_logger.c  arduino_logger.h
arduino/register/: reg_pin.c  reg_pin.h  reg_time.c  reg_time.h  test_reg.h  test_reg_pin.c  test_reg_time.c
integration_test/: run_tests.py
integration_test/test_config/: test.ino  test.py
integration_test/test_delai/: config.json  test.ino
integration_test/test_empty/: test.py
integration_test/test_loop/: config.json  test.ino  test.py
integration_test/test_setup/: test.ino  test.py
interpreter/: meson.build
interpreter/include/: int_arduino_code_model.h  int_jsonify_log.h
interpreter/src/: int_arduino_code_model.c  int_jsonify_log.c  int_main.c  meson.build
microclib/: README.md  meson.build
microclib/include/: mc_board.h  mc_digital_io.h  mc_error.h  mc_interrupt.h  mc_io_event.h  mc_time.h  microclib.h
microclib/src/: mc_board.c  mc_digital_io.c  mc_error.c  mc_interrupt.c  mc_io_event.c  mc_time.c  meson.build
microclib/test/: meson.build  test_mc_board.c  test_mc_interrupt.c  test_mc_io.c  test_mc_io_event.c  test_mc_time.c
register/: Makefile  reg_pin.c  reg_pin.h  reg_time.c  reg_time.h  test_reg.c  test_reg_pin.c
register/test/: test_reg_pin.c  test_reg_time.c
tests/: helper.py
tests/test_config/: config.json  test.py
tests/test_delai/: test.py
tests/test_empty/: test.py
tests/test_function_prototype/: test.ino  test.py
tests/test_input_read/: config.json  test.ino  test.py
tests/test_loop/: test.py
(+4 files in other folders)
